<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_ht_echPro"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/crnr_card_eachPro"
    android:id="@+id/id_lin_each_prod"
    app:cardBackgroundColor="@color/gray"
    android:layout_marginBottom="@dimen/mBot_card_echPro"
    android:elevation="@dimen/card_ele_eachPro"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tv_size_eachPro"
        android:layout_gravity="center"
        android:padding="@dimen/pad_tv_echPro"
        android:id="@+id/id_tv_each_product"/>
</android.support.v7.widget.CardView>