...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_as_fav_btn_detail"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/btn_detail"
                android:gravity="center"
                android:id="@+id/id_fav_btn_in_detail"
                android:textColor="@color/black" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
...
